--- a/.hidden/CHANGELOG
+++ b/.hidden/CHANGELOG
@@ -1,3 +1,5 @@
+* Tue Jun 04 2024 brian <justlostintime@gmail.com> 2.0.6
+
 * Fri May 31 2024 brian <justlostintime@gmail.com> 2.0.8
 - Initial release
 
