--- a/.hidden/CHANGELOG
+++ b/.hidden/CHANGELOG
@@ -1,3 +1,6 @@
+* Wed Jun 26 2024 brian <justlostintime@gmail.com> 2.1.10
+- Create Firts ditribution version
+
 * Sun Jun 16 2024 brian <justlostintime@gmail.com> 2.1.9
 - Cleaned up the debug messages, added script to monitor the Shared memory
 
