--- a/.hidden/CHANGELOG
+++ b/.hidden/CHANGELOG
@@ -1,4 +1,7 @@
 * Wed Jun 26 2024 brian <justlostintime@gmail.com> 2.1.10
+- Added unit test suite
+
+* Wed Jun 26 2024 brian <justlostintime@gmail.com> 2.1.10
 - Create Firts ditribution version
 
 * Sun Jun 16 2024 brian <justlostintime@gmail.com> 2.1.9
