--- a/.hidden/CHANGELOG
+++ b/.hidden/CHANGELOG
@@ -1,3 +1,7 @@
+* Thu Jun 27 2024 brian <justlostintime@gmail.com> 2.1.10
+- Added support for Arrays of static size, values are variable, max of 10 dimensions
+- Added ability to access Queue, Lists and Arrays by tag name
+
 * Wed Jun 26 2024 brian <justlostintime@gmail.com> 2.1.10
 - Create Firts ditribution version
 
