--- a/.hidden/CHANGELOG
+++ b/.hidden/CHANGELOG
@@ -1,3 +1,22 @@
+* Sat Jul 06 2024 brian <justlostintime@gmail.com> 2.1.16
+
+* Sat Jul 06 2024 brian <justlostintime@gmail.com> 2.1.14
+
+* Sat Jul 06 2024 brian <justlostintime@gmail.com> 2.1.14
+
+* Sat Jul 06 2024 brian <justlostintime@gmail.com> 2.1.16
+
+* Sat Jul 06 2024 brian <justlostintime@gmail.com> 2.1.16
+
+* Sat Jul 06 2024 brian <justlostintime@gmail.com> 2.1.14
+
+* Sat Jul 06 2024 brian <justlostintime@gmail.com> 2.1.16
+
+* Sat Jul 06 2024 brian <justlostintime@gmail.com> 2.1.16
+
+* Sat Jul 06 2024 brian <justlostintime@gmail.com> 2.1.15
+- Updated Help information embedded in the source code
+
 * Fri Jul 05 2024 brian <justlostintime@gmail.com> 2.1.14
 
 * Fri Jul 05 2024 brian <justlostintime@gmail.com> 2.1.12
