--- a/.hidden/CHANGELOG
+++ b/.hidden/CHANGELOG
@@ -1,3 +1,6 @@
+* Wed Feb 26 2025 brian <justlostintime@gmail.com> 2.1.20
+- Updated to allow execution of code blocks from gambas applications
+
 * Mon Jul 15 2024 brian <justlostintime@gmail.com> 2.1.17
 - Updated to also signal when a variable is removed. updated demo scripts.
 
