--- a/.hidden/CHANGELOG
+++ b/.hidden/CHANGELOG
@@ -1,3 +1,5 @@
+* Mon Mar 10 2025 brian <justlostintime@gmail.com> 2.2.1
+
 * Wed Feb 26 2025 brian <justlostintime@gmail.com> 2.1.20
 - Updated to allow execution of code blocks from gambas applications
 
